# instruments-platform

./: LICENSE  README.md
dlthub-python/: Dockerfile  hello_boto3.py  requirements.txt  rest_api_pipeline.py
flask_instruments_api/: app.py  requirements.txt
instruments_bot/: Justfile  README.md  chrome_install.sh  daily.sh  link.json  pick_stock.csv  pyproject.toml
instruments_bot/crontab/: cron.py  log_cron.txt  setup_crontab.py
instruments_bot/src/: __init__.py  env_requirements.txt  env_setup.py
instruments_bot/src/grapebot/: log.py  process.py  set_time.py  telegram.py  test.py  utils.py
instruments_bot/src/grapebot/auth/: __init__.py  entradex.py  fireant_authorizer.py  ssi_fcdata.py  tcinvest.py
instruments_bot/src/grapebot/master/: build_data.py  cli.py  daily_master.py  total_merge.py
instruments_bot/src/grapebot/master/cate/: base_holc.py  getBase.py
instruments_bot/src/grapebot/master/fireant/: fundamental.py  fundamental_old.py  holc.py  holders.py  index_merger.py  instruments.py  liveshare.py  timescalemark.py
instruments_bot/src/grapebot/master/slowhorse/: gselenium.py
instruments_bot/src/grapebot/master/vndirect/: foreign_flow.py  holc.py  instruments.py
instruments_bot/src/grapebot/storage/: __init__.py  csv_storage.py  json_storage.py  local.py  s3_storage.py  utils.py
instruments_bot/src/grapebot/tests/: final_check.py
instruments_bot/src/trading_calendar/: vn_market.py
trino-minio-docker/: Dockerfile  docker-compose.yml  minio.s3cfg
vite-flask-ui/: package-lock.json  package.json  vite.config.ts
(+14 files in other folders)
