[tool.poetry]
name = "grapebot"
version = "1.0.1"
description = ""
authors = ["BinhOT <binhot@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
DateTime = "^4.7"
selenium = "^4.18.1"
pandas = "^1.5.0"
aiohttp = "^3.8.3"
asyncio = "^3.4.3"
pytz = "^2022.4"
retrying = "^1.3.3"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
html5lib = "^1.1"
boto3 = "^1.24.95"
tqdm = "^4.64.1"
strictyaml = "^1.6.2"
pyyaml = "^6.0"
xarray = "^2022.10.0"
h5netcdf = "^1.0.2"
netcdf4 = "^1.6.1"
wget = "^3.2"
botocore = "^1.29.13"
cryptography = "^39.0.0"
pyopenssl = "^23.0.0"
selenium-wire = "^5.1.0"
cfscrape = "^2.1.1"
cloudscraper = "^1.2.71"
python-crontab = "^2.7.1"
h5py = "^3.9.0"
undetected-chromedriver = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
master = 'grapebot.master.daily_master:main'
hist = 'grapebot.master.daily_master:main_hist'
mhist = 'grapebot.master.total_merge:main_hist'

merge = 'grapebot.master.total_merge:main'
test = 'grapebot.master.test:main'
data = 'grapebot.master.build_data:main'
cli = 'grapebot.master.cli:main'
tests = 'grapebot.tests.final_check:main'
tcinvest ='grapebot.master.tcbs.assets:main'
tcport ='grapebot.master.tcbs.portfolio:main'